--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Aakash University</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="https://th.bing.com/th/id/OIP.eRhdDAoKaMzaCSq_QBQLNAAAAA?pid=ImgDet&w=250&h=250&rs=1"  type = "image/x-icon">
+</head>
+<body background="https://cdn.pixabay.com/photo/2017/12/22/08/01/book-3033196_1280.jpg" background-repeat: no-repeat;
+background-attachment: fixed;
+background-size: 100% 100%;>
+   <img src="https://th.bing.com/th/id/OIP.eRhdDAoKaMzaCSq_QBQLNAAAAA?pid=ImgDet&w=250&h=250&rs=1" alt="university logo" style="width:100px;height:100px;">
+<div style="text-align: center;">
+    <h1>Welcome to Aakash University</h1>
 
+    </div>
+    <div class="wrap" style="padding: 20px 20px;">
+  <button class="button">Home</button>
+    <button class="button">About us</button>
+    <button class="button">Academics</button>
+    <button class="button">Admissions</button>
+    <button class="button">Contact us</button>
+    <button class="button">Apply now</button>
+    </div>
+    <div>
+        <p class="info" style="color:green;
+        text-align: center;
+        font-size: medium;
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        font-style: initial;">
+            The Aakash University is one of the leading Universities in the world. 
+            Our highly trained professors are committed to providing best in class education in various fields.
+            Apart from offering technical courses, the University provides courses related to Arts, Commerce fields as well.
+            Do consider visiting our campus.  
+        </p>
+        <h3 style="color:brown">Quote from Principal: </h3>
+        <p class="info2" style="color:green;text-align:start;
+        font-size: medium;
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        font-style: initial;">"I am honored to lead and be a part of one of the most successful universities in the world. We at Aakash univerisity focus on creating real-world opportunities for our students. 
+We strive to maintain the glorious tradition and work towards a better future for all humankind."</p>
+    </div>
+    
+    <script src="App.js"></script>
+</body>
+</html>
